# bangla_news_scrapper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
pasenv/: pyvenv.cfg
pasenv/Scripts/: activate  activate.bat
src/ProthomAloScrapper/: scrapper.py
src/ProthomAloScrapper.egg-info/: PKG-INFO  SOURCES.txt
src/p_aloNewsScrapper/: PAloWebScrapper.py  out.csv  test_scrapper.py
