[metadata]
name = ProthomAloScrapper
version = 0.0.1
description = A short description of your package
long_description = file: README.md
long_description_content_type = text/markdown
author = Md. Zakaria Kabir
author_email = zakariak5469@gmail.com
url = https://github.com/yourusername/yourpackagename
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10.0

[options]
zip_safe = False
package_dir =
    = src
packages = find:

python_requires = >=3.9.13

install_requires =
    beautifulsoup4==4.12.2
    requests==2.31.0
    selenium==4.11.2


[options.packages.find]
where = src

# [options.packages.find]
# exclude =
#     tests
    
    

